--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
 
     <!-- Toggle menu -->
     <nav class="clear">
-	    <a aria-label="pull" id="pull" class="toggle" href="#">
+	    <a aria-label="pull" id="pull" class="toggle" href="javascript:void(0)">
 	    	<span></span>
 	    </a>
 
