--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -1,10 +1,5 @@
-.blog-wrapper {
-  padding: 1em;
-}
-
 .search-container {
-  margin: auto;
-  max-width: $m-break;
+  margin: 5px auto;
   height: 2.5em;
   position: relative;
 
