--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -14,7 +14,7 @@
 }
 
 .site-header {
-  padding: 5px;
+  padding: 5px 5px 0 5px;
   background: $brand-color;
   max-width: $m-break;
   margin-left: auto;
