--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -23,7 +23,7 @@
                   {{ post.title }}
                 </a>
               </h1>
-              {% include post_info.html author=post.author date=post.date %}
+              {% include post_info.html date=post.date %}
             </header>
             {% if site.excerpt or site.theme_settings.excerpt %}
                 <div class="excerpt">
