--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -17,8 +17,7 @@
   padding: 5px 5px 0 5px;
   background: $brand-color;
   max-width: $m-break;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 
   .separator {
     user-select: none;
