--- a/_includes/blog_nav.html
+++ b/_includes/blog_nav.html
@@ -6,7 +6,7 @@
     {% endfor %}
   {% else %}
     {% if paginator.page < 4 %}
-      {% for idx in (2..paginator.total_page) %}
+      {% for idx in (2..paginator.total_pages) %}
         <a href="{{ site.paginate_path | relative_url | replace: ':num', idx }}"> {{ idx }} </a>
       {% endfor %}
       <a> ... </a>
@@ -18,15 +18,15 @@
       <a href="{{ site.paginate_path | relative_url | replace: ':num', paginator.previous_page }}"> {{ paginator.previous_page }} </a>
       <a href="{{ site.paginate_path | relative_url | replace: ':num', paginator.page }}"> {{ paginator.page }} </a>
       {% if {{ paginator.total_pages - paginator.page }} < 3 %}
-        {% for idx in (paginator.next_page..paginator.total_page) %}
+        {% for idx in (paginator.next_page..paginator.total_pages-1) %}
           <a href="{{ site.paginate_path | relative_url | replace: ':num', idx }}"> {{ idx }} </a>
         {% endfor %}
       {% else %}
+        <a href="{{ site.paginate_path | relative_url | replace: ':num', paginator.next_page }}"> {{ paginator.next_page }} </a>
         <a> ... </a>
-        <a href="{{ site.paginate_path | relative_url | replace: ':num', paginator.total_pages }}"> {{ paginator.total_pages }} </a>
       {% endif %}
     {% endif %}
-
+    <a href="{{ site.paginate_path | relative_url | replace: ':num', paginator.total_pages }}"> {{ paginator.total_pages }} </a>
   {% endif %}
 
 </div>
