--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,45 +1,48 @@
 ---
 layout: default
 ---
-<article {% if page.feature-img or page.color %}class="feature-image" {% endif %}>
-  <header id="main" style="">
-    <div class="title-padder">
-      {% if page.hide_title %}
-      <div class="feature-image-padding"></div>
-      {% else %}
-      <h1 id="{{ page.title | cgi_escape }}" class="title">{{ page.title }}</h1>
-      {% include post_info.html date=page.date %}
-      {% endif %}
-    </div>
-  </header>
+<div class="post-wrapper">
+  <article {% if page.feature-img or page.color %}class="feature-image" {% endif %}>
+    <header id="main" style="">
+      <div class="title-padder">
+        {% if page.hide_title %}
+        <div class="feature-image-padding"></div>
+        {% else %}
+        <h1 id="{{ page.title | cgi_escape }}" class="title">{{ page.title }}</h1>
+        {% include post_info.html date=page.date %}
+        {% endif %}
+      </div>
+    </header>
 
-  <section class="post-content">
-  {% if page.bootstrap %}
-    <div class="bootstrap-iso">
-    {% endif %}
-      {{ content }}
+    <section class="post-content">
     {% if page.bootstrap %}
-    </div>
+      <div class="bootstrap-iso">
+      {% endif %}
+        {{ content }}
+      {% if page.bootstrap %}
+      </div>
+    {% endif %}
+    </section>
+
+    <!-- Social media shares -->
+    {% include share_buttons.html %}
+
+     <!-- Tag list -->
+    {% capture tag_list %}{{ page.tags | join: "|"}}{% endcapture %}
+    {% include tags_list.html tags=tag_list %}
+
+  </article>
+
+  <!-- Disqus -->
+  {% if site.disqus_shortname or site.theme_settings.disqus_shortname %}
+  {% include disqus.html %}{% endif %}
+
+  <!-- Post navigation -->
+  {% if site.post_navigation  or site.theme_settings.post_navigation %}
+    {% include post_nav.html %}
   {% endif %}
-  </section>
-
-  <!-- Social media shares -->
-  {% include share_buttons.html %}
-
-   <!-- Tag list -->
-  {% capture tag_list %}{{ page.tags | join: "|"}}{% endcapture %}
-  {% include tags_list.html tags=tag_list %}
-
-</article>
-
-<!-- Disqus -->
-{% if site.disqus_shortname or site.theme_settings.disqus_shortname %}
-{% include disqus.html %}{% endif %}
-
-<!-- Post navigation -->
-{% if site.post_navigation  or site.theme_settings.post_navigation %}
-  {% include post_nav.html %}
-{% endif %}
+  
+</div>
 
 <!-- To change color of links in the page -->
 <style>
