post page design

--- a/_sass/layouts/_blog.scss
+++ b/_sass/layouts/_blog.scss
@@ -59,7 +59,7 @@
 .posts {
   .post-teaser {
     @extend %padding-post;
-    background-color: #fff;
+    background-color: $background-color;
     box-shadow: 3px 3px 5px #ccc;
     margin-bottom: 1em;
     background-size: $feature-image-size;
