--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -1,12 +1,13 @@
 .comments {
   @extend %padding-post;
-  border-bottom: 1px solid $border-color;
-  float: left;
   width: 100%;
 }
 
-article {
-  @extend .comments;
+.post-wrapper article {
+  // float: left;
+  background: $background-color;
+  box-shadow: 3px 3px 5px #ccc;
+  margin: 1.5em;
 
   header {
     margin-bottom: 6%;
