--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -4,8 +4,7 @@
 }
 
 .post-wrapper article {
-  // float: left;
-  background: $background-color;
+  background: $brand-color;
   box-shadow: 3px 3px 5px #ccc;
   margin: 1.5em;
 
