--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -9,7 +9,7 @@
     padding: .6em;
     margin-left: auto;
 
-    background: $background-color none;
+    background: $brand-color none;
     color: $text-color;
     border: 1px solid #ccc;
     border-radius: 3px;
