--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -26,7 +26,7 @@ $x-sm-break: 300px;
 // Brand colours
 $theme-color: #999;
 $brand-color: #fff;
-$background-color: #fff;
+$background-color: #f5f5f5;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
