post page design update

--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -5,6 +5,7 @@
   text-align: center;
   width: 100%;
   color: lighten($text-color, 24%);
+  background: $brand-color;
   font-size: 0.9em;
 
   .footer-icons {
