--- a/_sass/layouts/_tags.scss
+++ b/_sass/layouts/_tags.scss
@@ -1,7 +1,9 @@
+.post-wrapper article footer {
+    text-align: left;
+}
+
 .tag-list {
-  width: 100%;
   font-size: 0.9em;
-  padding-bottom: $padding-x-small;
 
   div.meta {
     margin-right: 0.5em;
