--- a/_sass/includes/_post_nav.scss
+++ b/_sass/includes/_post_nav.scss
@@ -1,27 +1,19 @@
 #post-nav {
-  width: 100%;
-  display: inline-block;
   @extend %padding-nav;
+  border-top: 1px solid #ccc;
 
   a {
-    width: 100%;
-    padding: 0;
-    margin: 0;
+    text-decoration: none;
   }
 
-  p {
-    @extend .meta;
-  }
-
-  #previous-post {
-    float: left;
+  #previous-post, #next-post {
+    display: inline-block;
     width: 50%;
   }
 
   #next-post {
     float: right;
     text-align: right;
-    width: 50%;
   }
 
   @media screen and (max-width: $sm-break) {
@@ -30,4 +22,3 @@
     }
   }
 }
-
