--- a/_sass/includes/_post_nav.scss
+++ b/_sass/includes/_post_nav.scss
@@ -4,6 +4,11 @@
 
   a {
     text-decoration: none;
+
+    i.fa {
+      line-height: .5em;
+      margin: 0 5px;
+    }
   }
 
   #previous-post, #next-post {
@@ -19,6 +24,10 @@
   @media screen and (max-width: $sm-break) {
     a, p {
       font-size: 0.8em;
+    }
+
+    a i.fa {
+      line-height: .2em;
     }
   }
 }
