--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -35,6 +35,9 @@
                 </div>
             {% endif %}
         </span>
+        <!-- Tag list -->
+        {% capture tag_list %}{{ post.tags | join: "|"}}{% endcapture %}
+        {% include tags_list.html tags=tag_list %}
       </div>
       {% endfor %}
   </div>
