--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,8 +1,8 @@
 ---
-layout: page
+layout: default
 ---
 
-<div class="home">
+<div class="tag-wrapper">
 
 <!-- cycles through posts to get tags -->
 {% assign rawtags = "" %}
@@ -25,53 +25,51 @@ layout: page
 {% include tags_list.html tags=rawtags %}
 
     <!-- Displays the posts and pages that contains the tag-->
-    <div class="tag-wrapper">
-      <div class="posts">
-          {% for tag in tags %}
-          <h3 id="{{ tag | cgi_escape }}" class="tag-anchor">
-              <a href="#{{ tag | cgi_escape }}"><i class="fa fa-tag fa-fw"></i> {{ tag }}</a>
-              <a href="#{{ page.title }}" style="float: right"><i class="fa fa-chevron-up" aria-hidden="true"> </i> </a>
+    <div class="posts">
+        {% for tag in tags %}
+        <h3 id="{{ tag | cgi_escape }}" class="tag-anchor">
+            <a href="#{{ tag | cgi_escape }}"><i class="fa fa-tag fa-fw"></i> {{ tag }}</a>
+            <a href="#{{ page.title }}" style="float: right"><i class="fa fa-chevron-up" aria-hidden="true"> </i> </a>
 
-          </h3>
+        </h3>
 
-          <!-- Posts and collection for each tags -->
-          <div class="tag-posts">
+        <!-- Posts and collection for each tags -->
+        <div class="tag-posts">
 
-              <!-- Pages -->
-              {% for page in site.pages %}
-                  {% if page.tags contains tag %}
-                  <h5 class="tag-title">
-                      <a href="{{ page.url | relative_url }}">
-                          <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                          {{ page.title }}
-                      </a>
+            <!-- Pages -->
+            {% for page in site.pages %}
+                {% if page.tags contains tag %}
+                <h5 class="tag-title">
+                    <a href="{{ page.url | relative_url }}">
+                        <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                        {{ page.title }}
+                    </a>
 
-                      <div class="meta">
-                          {{ "today" | date: "%B %-d, %Y" }}
-                      </div>
-                  </h5>
-                  {% endif %}
-              {% endfor %}
+                    <div class="meta">
+                        {{ "today" | date: "%B %-d, %Y" }}
+                    </div>
+                </h5>
+                {% endif %}
+            {% endfor %}
 
-              <!-- Posts -->
-              {% for post in site.posts %}
-                  {% if post.tags contains tag %}
-                  <h5 class="tag-title">
-                      <a href="{{ post.url | relative_url }}">
-                          <i class="fa fa-file-text-o" aria-hidden="true"></i>
-                          {{ post.title }}
-                      </a>
+            <!-- Posts -->
+            {% for post in site.posts %}
+                {% if post.tags contains tag %}
+                <h5 class="tag-title">
+                    <a href="{{ post.url | relative_url }}">
+                        <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                        {{ post.title }}
+                    </a>
 
-                      <div class="meta">
-                          {{ post.date | date: "%B %-d, %Y" }}
-                      </div>
-                  </h5>
-                  {% endif %}
-              {% endfor %}
+                    <div class="meta">
+                        {{ post.date | date: "%B %-d, %Y" }}
+                    </div>
+                </h5>
+                {% endif %}
+            {% endfor %}
 
-          </div>
-          {% endfor %}
+        </div>
+        {% endfor %}
 
-      </div>
     </div>
 </div>
