--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
-$font-family-main: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', 'Spoqa Han Sans Neo', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-$font-family-headings: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', 'Spoqa Han Sans Neo', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-$font-family-logo: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', 'Spoqa Han Sans Neo', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family-main: 'Open Sans', 'Spoqa Han Sans Neo', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family-headings: 'Open Sans', 'Spoqa Han Sans Neo', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family-logo: 'Open Sans', 'Spoqa Han Sans Neo', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 $font-size: 1em;
 
 // Padding
