--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -8,21 +8,15 @@
   </div>
   <div class="posts">
       {% for post in paginator.posts %}
-      <div class="post-teaser">
+      <a aria-label="{{ post.title }}" class="post-link post-teaser" href="{{ post.url | relative_url }}">
           {% if post.thumbnail %}
           <div class="post-img">
-              <a aria-label="{{ post.title }}" href="{{ post.url | relative_url }}">
-                  <img alt="{{ post.title }}" src="{{ post.thumbnail | relative_url }}">
-              </a>
+              <img alt="{{ post.title }}" src="{{ post.thumbnail | relative_url }}">
           </div>
           {% endif %}
           <span>
             <header>
-              <h1>
-                <a aria-label="{{ post.title }}" class="post-link" href="{{ post.url | relative_url }}">
-                  {{ post.title }}
-                </a>
-              </h1>
+              <h1> {{ post.title }} </h1>
               {% include post_info.html date=post.date %}
             </header>
             {% if site.excerpt or site.theme_settings.excerpt %}
@@ -38,7 +32,7 @@
         <!-- Tag list -->
         {% capture tag_list %}{{ post.tags | join: "|"}}{% endcapture %}
         {% include tags_list.html tags=tag_list %}
-      </div>
+      </a>
       {% endfor %}
   </div>
 
