--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -16,55 +16,57 @@
 {% endfor %}
 
 <div class="tag-wrapper">
-  <!-- Displays the list of tags-->
-  {% include tags_list.html tags=rawtags %}
-  
-  <!-- Displays the posts and pages that contains the tag-->
-  <div class="posts">
-      {% for tag in tags %}
-      <h3 id="{{ tag | cgi_escape }}" class="tag-anchor">
-          <a href="#{{ tag | cgi_escape }}"><i class="fa fa-tag fa-fw"></i> {{ tag }}</a>
-          <a href="#{{ page.title }}" style="float: right"><i class="fa fa-chevron-up" aria-hidden="true"> </i> </a>
+  <article>
+    <!-- Displays the list of tags-->
+    {% include tags_list.html %}
 
-      </h3>
+    <!-- Displays the posts and pages that contains the tag-->
+    <div class="posts">
+        {% for tag in tags %}
+        <h3 id="{{ tag | cgi_escape }}" class="tag-anchor">
+            <a href="#{{ tag | cgi_escape }}"><i class="fa fa-tag fa-fw"></i> {{ tag }}</a>
+            <a href="#{{ page.title }}" style="float: right"><i class="fa fa-chevron-up" aria-hidden="true"> </i> </a>
 
-      <!-- Posts and collection for each tags -->
-      <div class="tag-posts">
+        </h3>
 
-          <!-- Pages -->
-          {% for page in site.pages %}
-              {% if page.tags contains tag %}
-              <h5 class="tag-title">
-                  <a href="{{ page.url | relative_url }}">
-                      <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                      {{ page.title }}
-                  </a>
+        <!-- Posts and collection for each tags -->
+        <div class="tag-posts">
 
-                  <div class="meta">
-                      {{ "today" | date: "%B %-d, %Y" }}
-                  </div>
-              </h5>
-              {% endif %}
-          {% endfor %}
+            <!-- Pages -->
+            {% for page in site.pages %}
+                {% if page.tags contains tag %}
+                <h5 class="tag-title">
+                    <a href="{{ page.url | relative_url }}">
+                        <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                        {{ page.title }}
+                    </a>
 
-          <!-- Posts -->
-          {% for post in site.posts %}
-              {% if post.tags contains tag %}
-              <h5 class="tag-title">
-                  <a href="{{ post.url | relative_url }}">
-                      <i class="fa fa-file-text-o" aria-hidden="true"></i>
-                      {{ post.title }}
-                  </a>
+                    <div class="meta">
+                        {{ "today" | date: "%B %-d, %Y" }}
+                    </div>
+                </h5>
+                {% endif %}
+            {% endfor %}
 
-                  <div class="meta">
-                      {{ post.date | date: "%B %-d, %Y" }}
-                  </div>
-              </h5>
-              {% endif %}
-          {% endfor %}
+            <!-- Posts -->
+            {% for post in site.posts %}
+                {% if post.tags contains tag %}
+                <h5 class="tag-title">
+                    <a href="{{ post.url | relative_url }}">
+                        <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                        {{ post.title }}
+                    </a>
 
-      </div>
-      {% endfor %}
+                    <div class="meta">
+                        {{ post.date | date: "%B %-d, %Y" }}
+                    </div>
+                </h5>
+                {% endif %}
+            {% endfor %}
 
-  </div>
+        </div>
+        {% endfor %}
+
+    </div>
+  </article>
 </div>
