--- a/_sass/layouts/_tags.scss
+++ b/_sass/layouts/_tags.scss
@@ -8,9 +8,7 @@
 
 .tag-list {
   font-size: 0.9em;
-  text-align: center;
-  padding: 0 3% 3%;
-  border-bottom: 1px solid #ccc;
+  text-align: left;
 
   div.meta {
     margin-right: 0.5em;
