--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -18,7 +18,7 @@
 <div class="tag-wrapper">
   <article>
     <!-- Displays the list of tags-->
-    {% include tags_list.html tags=rawtags %}
+    {% include tags_list.html %}
 
   </article>
 </div>
