--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -15,8 +15,8 @@
     <!-- Displays the posts and pages that contains the tag-->
     <div class="posts">
         {% for tag in site.tags %}
-        <h3 id="{{ tag[0] | cgi_escape }}" class="tag-anchor">
-            <a href="#{{ tag[0] | cgi_escape }}"><i class="fa fa-tag fa-fw"></i> {{ tag[0] }}</a>
+        <h3 id="{{ tag | first | slugify }}" class="tag-anchor">
+            <a href="#{{ tag | first | slugify }}"><i class="fa fa-tag fa-fw"></i> {{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a>
             <a href="#{{ page.title }}" style="float: right"><i class="fa fa-chevron-up" aria-hidden="true"> </i> </a>
 
         </h3>
