--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -16,17 +16,16 @@
     <div class="posts">
         {% for tag in site.tags %}
         <h3 id="{{ tag | first | slugify }}" class="tag-anchor">
-            <a href="#{{ tag | first | slugify }}"><i class="fa fa-tag fa-fw"></i> {{ tag | replace:'-', ' ' }} ({{ tag | last | size }})</a>
+            <a href="#{{ tag | first | slugify }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">
+              <i class="fa fa-tag fa-fw"></i> {{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a>
             <a href="#{{ page.title }}" style="float: right"><i class="fa fa-chevron-up" aria-hidden="true"> </i> </a>
 
         </h3>
 
-        {% assign posts = tag | last %}
-
         <!-- Posts and collection for each tags -->
         <div class="tag-posts">
             <!-- Posts -->
-            {% for post in posts %}
+            {% for post in tag[1] %}
                 <!-- {% if post.tags contains tag %} -->
                 <h5 class="tag-title">
                     <a href="{{ post.url | relative_url }}">
