--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -34,6 +34,15 @@
  }
 }
 
+.post-content > footer {
+  margin-bottom: 1em;
+}
+
+.tag-wrapper article footer {
+    padding: 0 3% 3%;
+    border-bottom: 1px solid #ccc;
+}
+
 footer {
   width: 100%;
   margin-top: 0;
