--- a/_includes/tags_cloud.html
+++ b/_includes/tags_cloud.html
@@ -1,6 +1,6 @@
 {% if site.tags.size > 0 %}
 <footer>
-  <div class="tag-list">
+  <div class="tag-list text-center">
     {% if tags.size == 1 %}
       <div class="meta">Tag</div>
     {% else %}
@@ -16,6 +16,6 @@
 </footer>
 {% else %}
 <footer>
-  <div class="tag-list"></div>
+  <div class="tag-list text-center"></div>
 </footer>
 {% endif %}
