--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -31,15 +31,15 @@ $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
 $text-color: #14213D;
-$meta: #5C79B8; //lowest gray for accessible color
-$link-color: $theme-color;
-$selection-color: $theme-color; // visible when highlighting text
+$meta: #2D4E6D; //lowest gray for accessible color
+$link-color: $text-color;
+$selection-color: $background-color; // visible when highlighting text
 $blockquote-color: #EEF7FA; // $background-color;
 
 // Header
 $header-background-color: darken($theme-color, 50%); // Only used when no header image
-$header-text-color: #FFF;
-$header-link-color: $theme-color;
+$header-text-color: $text-color;
+$header-link-color: $text-color;
 $navbar-separator-opacity: 0;
 
 // Feature image for articles
