--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -62,6 +62,7 @@ a.button {
   &:hover {
     background: $brand-color;
     border: 1px solid $theme-color;
+    color: $theme-color;
     text-decoration: none;
   }
 }
