--- a/_sass/layouts/_tags.scss
+++ b/_sass/layouts/_tags.scss
@@ -33,6 +33,8 @@
 }
 
 .tag-anchor {
+  margin: .5em 0 0;
+
   a {
     &:hover {
       text-decoration: none;
@@ -45,7 +47,7 @@
   width: 100%;
 
   .tag-title {
-    margin-top: 0;
+    margin-top: .3em;
     margin-bottom: 0;
     font-weight: normal;
 
