--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -1,3 +1,31 @@
+button#GoToTop {
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+    height: 3em;
+    width: 3em;
+    line-height: 3.3em;
+    text-align: center;
+    background: $brand-color;
+    border: 1px solid $text-color;
+    border-radius: 2em;
+    box-shadow: 3px 3px 5px #ccc;
+
+    transition: background-color .3s, opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+
+    &:hover {
+      border: 1px solid $theme-color;
+    }
+
+    &.show {
+      opacity: 1;
+      visibility: visible;
+    }
+}
+
 // To clear things when we float the element inside nav and ul
 .clear {
   *zoom: 1;
