edit gototop button

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -49,9 +49,9 @@
 		$(function(){
 			$(window).scroll(function(){
 				if ($(window).scrollTop() > 300) {
-			    btn.addClass('show');
+			    $('button#GoToTop').addClass('show');
 			  } else {
-			    btn.removeClass('show');
+			    $('button#GoToTop').removeClass('show');
 			  }
 			});
 
