--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -13,6 +13,7 @@
 
     transition: opacity .5s ease-in-out;
     opacity: 0;
+    visibility: hidden;
     z-index: 1000;
 
     &:hover {
@@ -25,6 +26,7 @@
 
     &.show {
       opacity: 1;
+      visibility: visible;
     }
 }
 
