--- a/_sass/layouts/_tags.scss
+++ b/_sass/layouts/_tags.scss
@@ -25,9 +25,13 @@
     margin: 0.1em;
     padding: 0.2em 0.4em;
 
+    &:hover {
+      color: $meta;
+      border: 1px solid $meta;
+    }
+
     &.hover-white:hover {
       color: $brand-color;
-      border: 1px solid $text-color;
     }
   }
 
